--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Tianyi Bao\n",
+    "UID: U89641075\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -18,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,9 +30,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The parameter p is the number that determines the degree of freedom in the minkowski distance. \n",
+    "\n",
+    "The parameter d is the number of coordinates required to define a point in the space."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,9 +47,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Euclidean distance calculates the distance of a straight line between two points. Manhattan distance can only calculate the distance between two points by the grid lines."
+   ]
   },
   {
    "attachments": {},
@@ -61,9 +70,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When p is very large, the distance becomes shorter. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,9 +85,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. Because it violates the triangle inequality. As 1/p is greater than 1, the hypotenuse becomes larger than the other two sides. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,9 +100,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When direction matters more than magnitude."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,9 +115,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The size of the intersection."
+   ]
   },
   {
    "attachments": {},
@@ -113,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
+      "['is', 'Bob', 'name', 'hello', 'my', 'Alice']\n",
       "[1, 0, 1, 1, 1, 1]\n"
      ]
     }
@@ -181,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,10 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hi', 'is', 'Bob', 'Claude', 'name', 'hello', 'my', 'Alice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 0, 0, 1, 1, 1, 1]\n",
+      "[0, 1, 1, 0, 1, 1, 1, 0]\n",
+      "[1, 1, 0, 1, 1, 0, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "print(v2)\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,15 +276,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def manhattan_dist(v1, v2):\n",
+    "    return sum(abs(a-b) for a, b in zip(v1, v2))\n",
+    "\n",
+    "v1_v2 = manhattan_dist(v1, v2)\n",
+    "print(v1_v2)\n",
+    "v1_v3 = manhattan_dist(v1, v3)\n",
+    "print(v1_v3)\n",
+    "v2_v3 = manhattan_dist(v2, v3)\n",
+    "print(v2_v3)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "v1 and v2 representing \"hello my name is Alice\" and \"hello my name is Bob\" are the most similar under the distance function. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +324,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0, 0, 0, 0, 0, 1], [0, 0, 0, 1, 0, 1, 0, 0], [0, 1, 1, 1, 1, 0, 1, 0], [1, 1, 0, 1, 1, 0, 1, 1], [0, 0, 1, 0, 0, 1, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences = [\n",
+    "    \"hi Alice\",\n",
+    "    \"hello Claude\",\n",
+    "    \"Bob my name is Claude\",\n",
+    "    \"hi Claude my name is Alice\",\n",
+    "    \"hello Bob\"\n",
+    "]\n",
+    "\n",
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "result = []\n",
+    "\n",
+    "for sentence in sentences:\n",
+    "    v = [1 if x in sentence else 0 for x in all_words]\n",
+    "    result.append(v)\n",
+    "\n",
+    "print(result)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,10 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 rows 8 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(result), \"rows\", len(result[0]), \"columns\")"
+   ]
   },
   {
    "attachments": {},
@@ -281,15 +389,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 4\n",
+      "0 2 7\n",
+      "0 3 4\n",
+      "0 4 4\n",
+      "1 0 4\n",
+      "1 2 5\n",
+      "1 3 6\n",
+      "1 4 2\n",
+      "2 0 7\n",
+      "2 1 5\n",
+      "2 3 3\n",
+      "2 4 5\n",
+      "3 0 4\n",
+      "3 1 6\n",
+      "3 2 3\n",
+      "3 4 8\n",
+      "4 0 4\n",
+      "4 1 2\n",
+      "4 2 5\n",
+      "4 3 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(result)):\n",
+    "    for j in range(len(result)):\n",
+    "        if i != j:\n",
+    "            print(i, j, manhattan_dist(result[i], result[j]))"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\"hello Claude\" and \"hello Bob\" are the most similar. "
+   ]
   },
   {
    "attachments": {},
@@ -382,12 +525,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
