--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -468,9 +468,34 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Assign each point in the dataset to its closest center [0, 2]\n",
+    "\n",
+    "    [0] is assigned to centroid [0].\n",
+    "\n",
+    "    [.5] is assigned to centroid [0].\n",
+    "\n",
+    "    [1.5] is assigned to centroid [0].\n",
+    "\n",
+    "    [2] is assigned to centroid [2].\n",
+    "\n",
+    "    [6] is assigned to centroid [2].\n",
+    "\n",
+    "    [6.5] is assigned to centroid [2].\n",
+    "    \n",
+    "    [7] is assigned to centroid [2].\n",
+    "\n",
+    "2. Compute the new centers as the means of each cluster\n",
+    "\n",
+    "    Centroid [0] would be the mean of [0, .5, 1.5], which is (0 + .5 + 1.5) / 3 = 0.67.\n",
+    "\n",
+    "    Centroid [2] would be the mean of [2, 6, 6.5, 7], which is (2 + 6 + 6.5 + 7) / 4 = 5.375.\n",
+    "\n",
+    "3. Repeat 2 & 3 until convergence\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -480,9 +505,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function sums up the distances between all the data points and their closest centroid."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -492,9 +520,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Because the centroids are picked randomly. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -504,9 +535,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It does not. Because Lloyd's Algorithm may get stuck in a local optimum, where a small change in the centroids could lead to a better solution, but the algorithm does not explore it."
+   ]
   }
  ],
  "metadata": {
