--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Zhengxu Wang  \n",
+    "UID: U81066856\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -24,9 +24,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "That allow us to test and observe the model."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,9 +39,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1,2,3  \n",
+    "6,4,2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,9 +55,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "5,7,9  \n",
+    "1,2,3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,9 +75,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "positive  \n",
+    "negative  \n",
+    "negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,9 +92,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1,2,3 negative"
+   ]
   },
   {
    "attachments": {},
@@ -89,9 +108,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Process Data  \n",
+    "Explore Data  \n",
+    "Extract Features  \n",
+    "Create Model"
+   ]
   },
   {
    "attachments": {},
@@ -107,9 +132,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "record: (name, age, balance) -> (“John”, 20, 100)  \n",
+    "graph: Adjacency Matrix or Adjacency List  \n",
+    "image: Pixel matrix (muti-dimention with RGB)  \n",
+    "text: Word of vectors"
+   ]
   },
   {
    "attachments": {},
@@ -120,9 +151,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Classification data points into cluster."
+   ]
   },
   {
    "attachments": {},
@@ -133,9 +167,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Temperture prediction."
+   ]
   }
  ],
  "metadata": {
@@ -154,12 +191,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
