--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Hitanshi Jain\n",
+    "UID: U95073268\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,9 +29,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "d = d-dimensional real space \n",
+    "p = parameter which makes it more flexible and provide characteristic to the minkowski distance. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,9 +45,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Euclidean distance is the shortest path between source and destination which is a straight line. but Manhattan distance is sum of all the real distances between source(s) and destination(d) and each distance are always the straight lines. \n",
+    "p = 2 (euclidean distance)\n",
+    "p = 1(manhattan distance)"
+   ]
   },
   {
    "attachments": {},
@@ -61,9 +70,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The distance will become 1 when p is very large. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,9 +85,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, minkowski distance is not a distance function when p < 1.\n",
+    "Explanation: Take the example A(0,0), B(1,0), C(0,1) and then D(B,C) > D(B,A) + D(A,C) if p<1 which violates the triangle inequality. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,9 +101,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When direction matters more than the magnitude, then cosine similarity is preferred. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,9 +116,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The jaccard distance account for the intersection of words between x and y compared to the union of x and y which the manhattan distance doesn't. "
+   ]
   },
   {
    "attachments": {},
@@ -113,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
+      "['is', 'Bob', 'my', 'hello', 'name', 'Alice']\n",
       "[1, 0, 1, 1, 1, 1]\n"
      ]
     }
@@ -181,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,10 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['is', 'Bob', 'my', 'hello', 'name', 'hi', 'Alice', 'Claude']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +246,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[1, 0, 1, 0, 1, 1, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "print(v2)\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,10 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def manhattan_dist(x,y):\n",
+    "    #TODO: check that x and y are of the same dimension\n",
+    "    res = 0\n",
+    "    for i in range(len(x)):\n",
+    "        res += abs(x[i]-y[i])\n",
+    "    return res"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +309,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['is', 'Bob', 'my', 'hello', 'name', 'hi', 'Alice', 'Claude']\n",
+      "[[0, 0, 0, 0, 0, 1, 1, 0], [0, 0, 0, 1, 0, 0, 0, 1], [1, 1, 1, 0, 1, 0, 0, 1], [1, 0, 1, 0, 1, 1, 1, 1], [0, 1, 0, 1, 0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"hi Alice\"\n",
+    "s2 = \"hello Claude\"\n",
+    "s3=\"Bob my name is Claude\"\n",
+    "s4 = \"hi Claude my name is Alice\"\n",
+    "s5=\"hello Bob\"\n",
+    "data = [s1,s2,s3,s4,s5]\n",
+    "all_sentences = list(set([item for x in data for item in x.split()]))\n",
+    "print(all_sentences)\n",
+    "\n",
+    "v1 = [1 if x in s1 else 0 for x in all_sentences]\n",
+    "v2 = [1 if x in s2 else 0 for x in all_sentences]\n",
+    "v3 = [1 if x in s3 else 0 for x in all_sentences]\n",
+    "v4 = [1 if x in s4 else 0 for x in all_sentences]\n",
+    "v5 = [1 if x in s5 else 0 for x in all_sentences]\n",
+    "\n",
+    "matrix = [v1,v2,v3,v4,v5]\n",
+    "print(matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,11 +349,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "rows - 5\n",
+    "columns - 8"
+   ]
   },
   {
    "attachments": {},
@@ -284,7 +370,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"hello Claude\" and \"hello Bob\" are the most similar. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,9 +413,29 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Initial centroids - [0,2]\n",
+    "cluster1 - 0, 0.5 \n",
+    "cluster2 - 1.5, 2, 6, 6.5, 7\n",
+    "\n",
+    "mean1 - 0.25\n",
+    "mean2 - 23/5 = 4.6\n",
+    "\n",
+    "2. New Centroids - [0.25, 4.6]\n",
+    "cluster1 - 0, 0.5, 2, 1.5\n",
+    "cluster2 - 6, 6.5, 7\n",
+    "\n",
+    "mean1 = 1, mean2 = 6.5\n",
+    "\n",
+    "3. New Centroids - [1, 6.5]\n",
+    "cluster1 = 0, 0.5, 2, 1.5\n",
+    "cluster2 = 6, 6.5, 7\n",
+    "\n",
+    "Since, the clusters remain same from step 2 to step 3, it has converged and is the final step. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,9 +445,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Cost Function for K means is just the sum of squared distances of each data point to it's assigned cluster. Where r is an indicator function equal to 1 if the data point (x_n) is assigned to the cluster (k) and 0 otherwise."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,9 +460,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K-means clustering does involve a random selection process for the initial centroid guesses, so you may get different results from different runs."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -361,9 +475,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Lloyd's algorithm always converges because it is a greedy algorithm that keeps decreasing the value of objective function."
+   ]
   }
  ],
  "metadata": {
@@ -382,12 +499,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
