--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Zhengxu Wang  \n",
+    "UID: U81066856  \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,9 +29,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "p is the power or degree parameter.   \n",
+    "d is the number of dimensions or features of the data set. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,9 +45,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Euclidean distance is the straight distance between two points, the shortest distance.  \n",
+    "Manhattan distance is the distance along the axis, how many steps it takes from one to another take when walking along the axis."
+   ]
   },
   {
    "attachments": {},
@@ -61,9 +69,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The distance similarity will less sensitive and close to Chebyshev distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,9 +84,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. Although it is still can be calculated but it against the traingle inequality rule."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,9 +99,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When the direction of a feature is more important than the stright-forward distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,9 +114,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The Jaccard distance considers the intersection of the sets and is more sensitive to the overlap between the sets, while the Manhattan distance does not account for the overlap and is more sensitive to the absolute differences between the elements in the sets."
+   ]
   },
   {
    "attachments": {},
@@ -113,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['hello', 'name', 'Alice', 'Bob', 'is', 'my']\n",
+      "[1, 1, 1, 0, 1, 1]\n"
      ]
     }
    ],
@@ -181,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,10 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'name', 'Claude', 'Alice', 'Bob', 'hi', 'is', 'my']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +244,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 0, 1, 0, 0, 1, 1]\n",
+      "[1, 1, 0, 0, 1, 0, 1, 1]\n",
+      "[0, 1, 1, 0, 0, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "print(v2)\n",
+    "\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,15 +277,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v1 to v2: 2\n",
+      "v2 to v3: 4\n",
+      "v1 to v3: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def manhattan_distance(v1, v2):\n",
+    "    zipped_vecs = zip(v1, v2)\n",
+    "    return sum(abs(x1 - x2) for x1, x2 in zipped_vecs)\n",
+    "\n",
+    "print('v1 to v2:', manhattan_distance(v1, v2))\n",
+    "print('v2 to v3:', manhattan_distance(v2, v3))\n",
+    "print('v1 to v3:', manhattan_distance(v1, v3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +315,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 0 1 0 0 1 1]\n",
+      " [1 1 0 0 1 0 1 1]\n",
+      " [0 1 1 0 0 1 1 1]\n",
+      " [0 0 0 1 0 1 0 0]\n",
+      " [1 0 1 0 0 0 0 0]\n",
+      " [0 1 1 0 1 0 1 1]\n",
+      " [0 1 1 1 0 1 1 1]\n",
+      " [1 0 0 0 1 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "s4 = \"hi Alice\"\n",
+    "corpus.append(s4)\n",
+    "v4 = [1 if x in s4 else 0 for x in all_words]\n",
+    "\n",
+    "s5 = \"hello Claude\"\n",
+    "corpus.append(s5)\n",
+    "v5 = [1 if x in s5 else 0 for x in all_words]\n",
+    "\n",
+    "s6 = \"Bob my name is Claude\"\n",
+    "corpus.append(s6)\n",
+    "v6 = [1 if x in s6 else 0 for x in all_words]\n",
+    "\n",
+    "s7 = \"hi Claude my name is Alice\"\n",
+    "corpus.append(s7)\n",
+    "v7 = [1 if x in s7 else 0 for x in all_words]\n",
+    "\n",
+    "s8 = \"hello Bob\"\n",
+    "corpus.append(s8)\n",
+    "v8 = [1 if x in s8 else 0 for x in all_words]\n",
+    "\n",
+    "matrix = []\n",
+    "matrix.append(v1)\n",
+    "matrix.append(v2)\n",
+    "matrix.append(v3)\n",
+    "matrix.append(v4)\n",
+    "matrix.append(v5)\n",
+    "matrix.append(v6)\n",
+    "matrix.append(v7)\n",
+    "matrix.append(v8)\n",
+    "\n",
+    "matrix = np.array(matrix)\n",
+    "print(matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,10 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix.shape)"
+   ]
   },
   {
    "attachments": {},
@@ -281,15 +404,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 and 7 : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "lowest_dist = manhattan_distance(v1, v2)\n",
+    "most_similar = (1, 2)\n",
+    "\n",
+    "for i in range(1, 9):\n",
+    "    for j in range(i + 1, 9):\n",
+    "        if manhattan_distance(matrix[i - 1], matrix[j - 1]) < lowest_dist:\n",
+    "            lowest_dist = manhattan_distance(matrix[i - 1], matrix[j - 1])\n",
+    "            most_similar = (i, j)\n",
+    "            \n",
+    "print(str(most_similar[0]) + \" and \" + str(most_similar[1]) + \" : \" + str(lowest_dist))"
+   ]
   },
   {
    "attachments": {},
@@ -325,9 +462,48 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "cluster1: [0, 0.5]  \n",
+    "cluster2: [1.5, 2, 6, 6.5, 7]  \n",
+    "\n",
+    "New Center 1: 0.25  \n",
+    "New Center 2: 4.6"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cluster 1: [0, 0.5, 1.5, 2]  \n",
+    "Cluster 2: [6, 6.5, 7]  \n",
+    "\n",
+    "New Center 1: 1  \n",
+    "New Center 2: 6.5  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cluster 1: [0, 0.5, 1.5, 2]  \n",
+    "Cluster 2: [6, 6.5, 7]  \n",
+    "\n",
+    "New Center 1: 1  \n",
+    "New Center 2: 6.5  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is no change from iteration 2 to 3, so the algorithm will end."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,9 +513,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function for k-means is a measure of how well the data points are clustered, where a lower cost function value indicates a better clustering solution. The k-means algorithm tries to minimize this cost function to produce the best clustering solution."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,9 +528,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Different initial center will lead to different results."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -361,9 +543,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Yes, because it is greedy algo."
+   ]
   }
  ],
  "metadata": {
@@ -382,12 +567,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
